fix: details component on mobile set full width container

--- a/src/app/pages/details/details.component.scss
+++ b/src/app/pages/details/details.component.scss
@@ -46,3 +46,9 @@
     min-width: 14rem;
   }
 }
+
+@media only screen and (max-width: vars.$breakpoint-lg) {
+  .chart-container {
+    width: 100% !important;
+  }
+}
